changed slider library and did some fixes

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -29,7 +29,7 @@
     <link rel="manifest" href="images/favicon/site.webmanifest" />
 
     <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="css/tiny-slider.css" />
+    <link rel="stylesheet" href="css/swiper.css" />
   </head>
   <body>
     <h1>hello <span class="yellow-part">world</span>!</h1>
@@ -191,152 +191,305 @@
     <section class="our-clients">
       <h1 class="our-clients-title underline">Our clients</h1>
 
-      <section class="reviews-wrapper">
-        <article class="review">
-          <img
-            class="reviewer-image"
-            src="images/avatar.png"
-            alt="Reviewer profile image"
-            width="99"
-            height="97"
-          />
-          <p class="reviewer-name">John Doe</p>
-          <section class="reviewer-rating">
+      <section class="swiper">
+        <section class="reviews-wrapper swiper-wrapper">
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
+            <p class="reviewer-name">John Doe1</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
+            <p class="reviewer-name">John Doe2</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
+            <p class="reviewer-name">John Doe3</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
+            <p class="reviewer-name">John Doe4</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
-          </section>
-          <p class="reviewer-comment">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-          </p>
-          <a href="#" class="base-button">Read On Google</a>
-        </article>
-        <article class="review">
-          <img
-            class="reviewer-image"
-            src="images/avatar.png"
-            alt="Reviewer profile image"
-            width="99"
-            height="97"
-          />
-          <p class="reviewer-name">John Doe</p>
-          <section class="reviewer-rating">
+            <p class="reviewer-name">John Doe5</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+          <article class="review swiper-slide">
             <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
+              class="reviewer-image"
+              src="images/avatar.png"
+              alt="Reviewer profile image"
+              width="99"
+              height="97"
             />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-          </section>
-          <p class="reviewer-comment">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-          </p>
-          <a href="#" class="base-button">Read On Google</a>
-        </article>
-        <article class="review">
-          <img
-            class="reviewer-image"
-            src="images/avatar.png"
-            alt="Reviewer profile image"
-            width="99"
-            height="97"
-          />
-          <p class="reviewer-name">John Doe</p>
-          <section class="reviewer-rating">
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-            <img
-              src="images/star.png"
-              alt="Star icon used for the rating"
-              width="15"
-              height="14"
-            />
-          </section>
-          <p class="reviewer-comment">
-            Lorem Ipsum is simply dummy text of the printing and typesetting
-            industry. Lorem Ipsum has been the industry's standard dummy text
-            ever since the 1500s, when an unknown printer took a galley of type
-          </p>
-          <a href="#" class="base-button">Read On Google</a>
-        </article>
+            <p class="reviewer-name">John Doe6</p>
+            <section class="reviewer-rating">
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+              <img
+                src="images/star.png"
+                alt="Star icon used for the rating"
+                width="15"
+                height="14"
+              />
+            </section>
+            <p class="reviewer-comment">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer took a galley of
+              type
+            </p>
+            <a href="#" class="base-button">Read On Google</a>
+          </article>
+        </section>
       </section>
+      <section class="reviews-pagination"></section>
 
       <a href="#" class="base-button black-button our-clients-all-button"
         >Read All Reviews</a
@@ -472,7 +625,7 @@
       </section>
     </footer>
 
-    <script src="scripts/tiny-slider.js"></script>
+    <script src="scripts/swiper.js"></script>
     <script src="scripts/all.js"></script>
   </body>
 </html>
