--- a/src/app/scss/layout/_services.scss
+++ b/src/app/scss/layout/_services.scss
@@ -95,7 +95,7 @@
             & > a {
               display: block;
               @include mt(3);
-              color: var(--primary);
+              color: #fff;
             }
 
             &.is-open {
