--- a/src/app/scss/styles.scss
+++ b/src/app/scss/styles.scss
@@ -8,10 +8,12 @@
 @import 'base/typography';
 @import 'base/common';
 
+// Components
+@import 'components/buttons';
+
 // Layout
 @import 'layout/services';
 @import 'layout/footer';
-@import 'layout/buttons';
 @import 'layout/our-clients';
 
 body {
