--- a/src/app/scss/styles.scss
+++ b/src/app/scss/styles.scss
@@ -12,6 +12,7 @@
 @import 'layout/services';
 @import 'layout/footer';
 @import 'layout/buttons';
+@import 'layout/find-us';
 
 body {
   background: var(--primary);
