add google maps

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -132,9 +132,8 @@
         </a>
       </section>
 
-      <!--      TODO: TO BE CHANGED TO REAL GOOGLE MAPS-->
       <section class="find-us-map-wrapper">
-        <img src="images/map.png" alt="map" width="367" height="345" />
+        <div id="map"></div>
         <section class="yellow-box"></section>
       </section>
     </section>
@@ -741,5 +740,9 @@
 
     <script src="scripts/swiper.js"></script>
     <script src="scripts/all.js"></script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXI8CD2Vs0Ri13-l-tCfW6DRhFH6nweHM&callback=initMap&v=weekly"
+      async
+    ></script>
   </body>
 </html>
