--- a/src/app/scss/layout/_buttons.scss
+++ b/src/app/scss/layout/_buttons.scss
@@ -2,11 +2,13 @@
 
 .base-button {
   background: var(--secondary);
+  min-width: 135px;
+  height: 46px;
   outline: 0;
   text-transform: capitalize;
   color: rgba(var(--primary), 0.8);
   font-family: Montserrat-SemiBold;
-  @include p(4, 5);
+  @include p(3, 3);
   border-radius: 15px;
   text-decoration: none;
   font-size: 18px;
