--- a/src/app/scss/styles.scss
+++ b/src/app/scss/styles.scss
@@ -7,11 +7,13 @@
 @import 'base/reset';
 @import 'base/fonts';
 @import 'base/typography';
+@import 'base/common';
 
 // Layout
 @import 'layout/services';
 @import 'layout/footer';
 @import 'layout/buttons';
+@import 'layout/header';
 
 body {
   background: var(--primary);
