add get reviews from google places

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -284,302 +284,7 @@
       <h1 class="our-clients-title underline">Our clients</h1>
 
       <section class="swiper">
-        <section class="reviews-wrapper swiper-wrapper">
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe1</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe2</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe3</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe4</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe5</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-          <article class="review swiper-slide">
-            <img
-              class="reviewer-image"
-              src="images/avatar.png"
-              alt="Reviewer profile image"
-              width="99"
-              height="97"
-            />
-            <p class="reviewer-name">John Doe6</p>
-            <section class="reviewer-rating">
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-              <img
-                src="images/star.png"
-                alt="Star icon used for the rating"
-                width="15"
-                height="14"
-              />
-            </section>
-            <p class="reviewer-comment">
-              Lorem Ipsum is simply dummy text of the printing and typesetting
-              industry. Lorem Ipsum has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a galley of
-              type
-            </p>
-            <a href="#" class="base-button">Read On Google</a>
-          </article>
-        </section>
+        <section class="reviews-wrapper swiper-wrapper"></section>
       </section>
       <section class="reviews-pagination"></section>
 
@@ -738,11 +443,11 @@
       </section>
     </footer>
 
+    <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?language=en&key=AIzaSyDXI8CD2Vs0Ri13-l-tCfW6DRhFH6nweHM&libraries=places&callback=initMap"
+    ></script>
     <script src="scripts/swiper.js"></script>
     <script src="scripts/all.js"></script>
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXI8CD2Vs0Ri13-l-tCfW6DRhFH6nweHM&callback=initMap&v=weekly"
-      async
-    ></script>
   </body>
 </html>
