--- a/src/app/scss/base/_fonts.scss
+++ b/src/app/scss/base/_fonts.scss
@@ -1,20 +1,20 @@
 // Header Font
 @font-face {
   font-family: 'Norwester';
-  src: url('../../fonts/norwester.otf');
+  src: url('/fonts/norwester.otf');
   font-display: swap;
 }
 
 // Subheader Font
 @font-face {
   font-family: 'Montserrat-SemiBold';
-  src: url('../../fonts/Montserrat-SemiBold.ttf');
+  src: url('/fonts/Montserrat-SemiBold.ttf');
   font-display: swap;
 }
 
 // Body Font
 @font-face {
   font-family: 'Montserrat-Regular';
-  src: url('../../fonts/Montserrat-Regular.ttf');
+  src: url('/fonts/Montserrat-Regular.ttf');
   font-display: swap;
 }
