fix first init map not working

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -445,6 +445,7 @@
 
     <script
       async
+      defer
       src="https://maps.googleapis.com/maps/api/js?language=en&key=AIzaSyDXI8CD2Vs0Ri13-l-tCfW6DRhFH6nweHM&libraries=places&callback=initMap"
     ></script>
     <script src="scripts/swiper.js"></script>
