add link for all reviews

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -288,7 +288,11 @@
       </section>
       <section class="reviews-pagination"></section>
 
-      <a href="#" class="base-button black-button our-clients-all-button"
+      <a
+        href="https://www.google.com/maps/place/Scorpio+Cykelv%C3%A6rksted/@56.16455,10.1999766,17z/data=!4m7!3m6!1s0x464c3fbf8b64f929:0xd39c77614dff5750!8m2!3d56.1645076!4d10.2022331!9m1!1b1"
+        class="base-button black-button our-clients-all-button"
+        target="_blank"
+        rel="noopener"
         >Read All Reviews</a
       >
 
