--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -14,6 +14,9 @@ $breakpoints: (
   'xl': (
     min-width: 1680px,
   ),
+  'working-hours': (
+    min-width: 1440px,
+  ),
 ) !default;
 
 $spacings: (
